--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -1,19 +1,30 @@
-\documentclass{sty/itam-thesis}
+\documentclass[colorful]{sty/itam-thesis}
 
-\usepackage[mark]{gitinfo2}
+\usepackage{lipsum}
 
-\author{Alonso Martinez C}
+\author{Alonso Martinez Cisneros}
 \title{Prueba De Titulo}
 \date{2022}
 
 \begin{document}
 
-% \frontmatter
+\frontmatter
 \maketitle
 \makefrontmatter
 
 \mainmatter
-Hola, probando \gitAbbrevHash{}
+
+\part{Primera parte}
+\chapter{Hola}
+
+\lipsum[1-10]
+
+\section{probando}
+Hola hola
+
+\chapter{DOS}
+
+Adios
 
 \end{document}
 
