--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -7,7 +7,7 @@
  publisher = {Palgrave Macmillan Journals},
  title = {A Survey of Applications of Markov Decision Processes},
  volume = {44},
- year = {1993}
+ year = {1993},
 }
 
 @thesis{ths:RodZ,
@@ -26,6 +26,6 @@
 	year = {2018},
 	institution = {Instituto Tecnológico de México (ITAM)},
 	location = {Ciudad de México},
-	author = {Delgado Meraz, Jorge Alfredo}
+	author = {Delgado Meraz, Jorge Alfredo},
 	pages = {69},
 }
