--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -2,8 +2,11 @@
 
 \usepackage{lipsum}
 
-\author{Alonso Martinez Cisneros}
-\title{Prueba De Titulo}
+% Paquete custom
+\usepackage{sty/thesis-package}
+
+\author{Alonso rtinez Cisneros}
+\title{otrotitulo}
 \date{2022}
 
 \begin{document}
@@ -25,6 +28,18 @@ Hola hola
 \chapter{DOS}
 
 Adios
+
+\begin{equation}
+	f: \R \to \R, \iint
+\end{equation}
+
+Tete
+
+\section{hai}
+
+\begin{mytheo}{Label}{Perron-F}
+	Holis
+\end{mytheo}
 
 \end{document}
 
