--- a/escrito/sty/itam-thesis.cls
+++ b/escrito/sty/itam-thesis.cls
@@ -14,17 +14,17 @@
 		%=================%
 		% Page dimensions %
 		%=================%
-		\usepackage[
-				showframe,
-				paperwidth=17cm,
-				paperheight=22.5cm,
-				nofoot=true,
-				bindingoffset=1.1cm,
-				inner=1.6cm,
-				outer=1.8cm,
-				top=2.5cm,
-				bottom=1.5cm
-			]{geometry}
+		% \usepackage[
+		% 		showframe,
+		% 		paperwidth=17cm,
+		% 		paperheight=22.5cm,
+		% 		nofoot=true,
+		% 		bindingoffset=1.1cm,
+		% 		inner=1.6cm,
+		% 		outer=1.8cm,
+		% 		top=2.5cm,
+		% 		bottom=1.5cm
+		% 	]{geometry}
 
 
 		%===================%
@@ -121,13 +121,64 @@
 }
 
 \newcommand{\makefrontmatter}{
-	\vfill
-	\noindent Typeset in Baskervald X and Nimbus Sans by
-	\LaTeX.
+	\vspace*{\fill}
+	\noindent Typeset in Baskervald X and Nimbus Sans by \LaTeX.
 
-	\noindent This version is revision \gitAbbrevHash{} (\gitAuthorDate), with content generated
+	\noindent This version is revision \gitAbbrevHash{} (\gitAuthorDate), with content 
+	generated
 
-	\vfill
+	\newpage
+
+	\thispagestyle{empty}
+
+	\vspace*{\fill}
+	\begingroup
+
+	\noindent
+	{
+	\fontfamily{lmr}\selectfont
+	<<Con fundamento en los artículos 21 y 27 de la Ley Federal del Derecho de Autor y 
+	como titular de los derechos moral y patrimonial de la obra titulada 
+	``\textbf{\@title}'', otorgo de manera gratuita y permanente al Instituto Tecnológico 
+	Autónomo de México y a la Biblioteca Raúl Bailléres Jr., la autorización para que 
+	fijen la obra en cualquier medio, incluido el electrónico, y la divulguen entre sus 
+	usuarios, profesores, estudiantes o terceras personas, sin que pueda percibir por tal 
+	divulgación una contraprestación.>>
+	\normalfont
+	}
+
+	\centering 
+
+	\vspace{5em}
+
+	\rule[1em]{20em}{0.5pt} % Línea para la fecha
+
+	\textsc{Fecha}
+	 
+	\vspace{8em}
+
+	\rule[1em]{20em}{0.5pt} % Línea para la firma
+
+	\textsc{\@author}
+
+	\endgroup
+	\vspace*{\fill}
+
+	\newpage
+}
+
+\newcommand{\makeacknowledgements}[2]{
+	\vspace*{\fill}
+	\begin{flushright}
+	\textit{#1}
+	\end{flushright}
+	\vspace*{\fill}
+
+	\newpage
+
+	\chapter*{Acknowledgements}
+
+	\noindent #2
 
 	\newpage
 	\tableofcontents*
