--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -2,11 +2,24 @@
 
 \usepackage{lipsum}
 
+\usepackage[
+		showframe,
+		paperwidth=17cm,
+		paperheight=22.5cm,
+		nofoot=true,
+		bindingoffset=1.1cm,
+		inner=1.6cm,
+		outer=1.8cm,
+		top=2.5cm,
+		bottom=1.5cm
+	]{geometry}
+
+
 % Paquete custom
 \usepackage{sty/thesis-package}
 
-\author{Alonso rtinez Cisneros}
-\title{otrotitulo}
+\author{Alonso Martinez Cisneros}
+\title{om}
 \date{2022}
 
 \begin{document}
@@ -14,6 +27,11 @@
 \frontmatter
 \maketitle
 \makefrontmatter
+\makeacknowledgements{
+	Thanks to
+}{
+	Acknowledgements to
+}
 
 \mainmatter
 
