--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -26,6 +26,6 @@
 	year = {2018},
 	institution = {Instituto Tecnológico de México (ITAM)},
 	location = {Ciudad de México},
-	author = {Delgado Meraz, Jorge Alfredo}
+	author = {Delgado Meraz, Jorge Alfredo},
 	pages = {69},
 }
