--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -67,11 +67,18 @@ Tete
 
 \section{hai}
 
-% \begin{mytheo}{Label}{Perron-F}
-% 	Holis
-% \end{mytheo}
+\begin{mytheo}{Label}{Perron-F}
+	Holis
+\end{mytheo}
 
-\lipsum[1-2]
+\begin{lstlisting}[language=julia, caption=Aplicando algoritmo de cifrado]
+# Definiendo sistema de Lorenz
+function lorenz!(du, u, p, t, σ=10, β=8//3, ρ=28)
+    du[1] = σ * (u[2] - u[1])
+    du[2] = u[1] * (ρ - u[3]) - u[2]
+    du[3] = u[1] * u[2] - β * u[3]
+end
+\end{lstlisting}
 
 \nocite{*}
 \printbibliography
