--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -50,26 +50,40 @@
 \part{Primera parte}
 \chapter{Hola}
 
-\lipsum[1-10]
+\section{Sección Primera}
+\lipsum[1-3]
 
-\section{probando}
-Hola hola
+\subsection{Subsección}
+Un poco de matemáticas:
 
-\chapter{DOS}
+A \emph{policy} is a mapping from states to actions $\pi: S \to A$.
 
-Adios
-
+A \emph{value function} from a policy, written $V^{\pi}: S \to \R$ gives the expected sum 
+of discounted rewards when acting under that policy
 \begin{equation}
-	f: \R \to \R, \iint
+	V^{\pi} (s) = \E \left[ \sum_{t=0}^{\infty} \gamma^t R(s_t) \mid s_0 =s, a_t = 
+	\pi(s_t), s_{t+1} \mid s_t a_t \sim P\right]
 \end{equation}
 
-Tete
+Ahora referenciamos a \cite{ths:RodZ} para probar el hightlighting de cita. Ahora pruebo 
+los theorem-like environments.
 
-\section{hai}
+\begin{thrm}{Borel--Carathéodory}{label}
+Let a function $f$ be analytic on a \emph{closed disc} of radius $R$ center origin.
+Suppose that $r < R$. Then, we have the following inequality:
+\begin{equation}
+\|f\|_r \le \frac{2r}{R-r} \sup_{|z| \le R} \operatorname{Re} f(z) + \frac{R+r}{R-r} 
+|f(0)|.
+\end{equation}
+\end{thrm}
 
-\begin{mytheo}{Label}{Perron-F}
-	Holis
-\end{mytheo}
+Ahora, un corolario bien inventado
+
+\begin{coro}{}{}
+	Corolario sin título ni label.
+\end{coro}
+
+Finalmente, un poco de código.
 
 \begin{lstlisting}[language=julia, caption=Aplicando algoritmo de cifrado]
 # Definiendo sistema de Lorenz
@@ -79,6 +93,7 @@ function lorenz!(du, u, p, t, σ=10, β=8//3, ρ=28)
     du[3] = u[1] * u[2] - β * u[3]
 end
 \end{lstlisting}
+
 
 \nocite{*}
 \printbibliography
