--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -93,6 +93,7 @@
 \DeclarePairedDelimiter{\nint}\lfloor\rceil %nearest integer
 \DeclarePairedDelimiter{\ceil}\lceil\rceil \DeclarePairedDelimiter{\floor}\lfloor\rfloor 
 \DeclarePairedDelimiter{\abs}\lvert\rvert % absolute value
+\DeclarePairedDelimiter{\brackets}{[}{]}
 
 %% Operators
 \DeclareMathOperator*{\argmax}{arg\,max}
@@ -100,7 +101,9 @@
 
 %% Commands
 \newcommand{\R}{\mathbb{R}}
-\newcommand{\E}{\mathbb{E}}
+\newcommand{\E}{\mathbb{E}\brackets}
+\newcommand{\Pe}{\mathbb{P}\brackets}
+\newcommand{\vertsep}{\,\middle\vert\,} % Growable vertical bar with spacing
 
 %%===========================%
 %% Theorem-like Environments %
@@ -110,30 +113,49 @@
 \newtcbtheorem[number within=chapter]{thrm}{Theorem}%
 	{
 		colback=white, % Inside color of content box
-		colframe=blue!50, % Outer box frame color
-		fonttitle=\bfseries,
+		colframe=frostMidBlue, % Outer box frame color
+		fonttitle=\bfseries\scshape, % font title style
 		enhanced,
-		coltitle=blue!75!black,
+		coltitle=black, % Title font color
 		attach boxed title to top left={
 			xshift=2ex,yshift=-2mm,yshifttext=-1mm
 			},
-		boxed title style={
-			colframe=blue!50, colback=blue!50
+		boxed title style={ % Title box
+			colframe=frostMidBlue, % Title box outer frame color
+			colback=frostMidBlue % Title box inner color
 			}
-	}{th}
+	}{thm}
 
 % Corollary
 \newtcbtheorem[number within=chapter]{coro}{Corollary}%
 	{
-		colback=white,
-		colframe=yellow!50,
-		fonttitle=\bfseries,
+		colback=white, % Inside color of content box
+		colframe=auroraLila, % Outer box frame color
+		fonttitle=\bfseries\scshape, % font title style
 		enhanced,
-		coltitle=yellow!75!black,
+		coltitle=black, % Title font color
 		attach boxed title to top left={
 			xshift=2ex,yshift=-2mm,yshifttext=-1mm
 			},
-		boxed title style={
-			colframe=yellow!50, colback=yellow!50
+		boxed title style={ % Title box
+			colframe=auroraLila, % Title box outer frame color
+			colback=auroraLila % Title box inner color
 			}
-	}{th}
+	}{cor}
+
+% Lemma
+\newtcbtheorem[number within=chapter]{lemma}{Lemma}%
+	{
+		colback=white, % Inside color of content box
+		colframe=auroraRed, % Outer box frame color
+		fonttitle=\bfseries\scshape, % font title style
+		enhanced,
+		coltitle=black, % Title font color
+		attach boxed title to top left={
+			xshift=2ex,yshift=-2mm,yshifttext=-1mm
+			},
+		boxed title style={ % Title box
+			colframe=auroraRed, % Title box outer frame color
+			colback=auroraRed % Title box inner color
+			}
+	}{lem}
