Printcheck con colores + JuliaMono

--- a/escrito/sty/itam-thesis.cls
+++ b/escrito/sty/itam-thesis.cls
@@ -41,7 +41,7 @@
 		\RequirePackage{float}
 		\RequirePackage[many]{tcolorbox}
 		\RequirePackage{listings} % Code listings
-		% \RequirePackage{fontspec} % For custom ttfont
+		\RequirePackage{fontspec} % For custom ttfont
 		\RequirePackage{hyperref}
 		% \RequirePackage{mdframed}
 
