--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -29,3 +29,13 @@
 	author = {Delgado Meraz, Jorge Alfredo},
 	pages = {69},
 }
+
+@book{SuttonBarto,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  year={2020},
+  publisher={MIT press},
+  series={Adaptive Computation and Machine Learning},
+  edition={2},
+  isbn={9780262039246},
+}
