--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -15,8 +15,10 @@
 	]{geometry}
 
 \usepackage{tikz}
-\usetikzlibrary{pgfplots.external}
-\tikzexternalize[prefix=figures/]
+\usepackage{tikzscale}
+\usetikzlibrary{backgrounds, intersections, fillbetween}
+% \usetikzlibrary{external}
+% \tikzexternalize[prefix=tikz/]
 
 \usepackage{import}
 
@@ -65,14 +67,14 @@
 
 % \input{Chapters/printTest.tex}
 \chapter*{Introduction}
-\input{bachelors-thesis.pdf_tex}
+
+
 \include{Chapters/0-Intro}
 
 \part{Foundations}
 
 \chapter{Setting the stage}
 \include{Chapters/Motivation}
-
 
 \chapter{Probability Theory}
 \chapter{Stochastic Processes \& Markov Decision Processes}
