Guardando antes de posible migracion

--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -39,3 +39,11 @@
   edition={2},
   isbn={9780262039246},
 }
+
+@Misc{silver2015,
+	author = {David Silver},
+	title = {Lectures on Reinforcement Learning},
+	howpublished = {\textsc{url:}~\url
+{https://www.davidsilver.uk/teaching/}},
+	year = {2015}
+}
