--- a/escrito/refs.bib
+++ b/escrito/refs.bib
@@ -47,3 +47,24 @@
 {https://www.davidsilver.uk/teaching/}},
 	year = {2015}
 }
+
+@misc{silver2017mastering,
+      title={Mastering Chess and Shogi by Self-Play with a General Reinforcement Learning Algorithm}, 
+      author={David Silver and Thomas Hubert and Julian Schrittwieser and Ioannis Antonoglou and Matthew Lai and Arthur Guez and Marc Lanctot and Laurent Sifre and Dharshan Kumaran and Thore Graepel and Timothy Lillicrap and Karen Simonyan and Demis Hassabis},
+      year={2017},
+      eprint={1712.01815},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI}
+}
+
+@article{silverchess,
+author = {David Silver  and Thomas Hubert  and Julian Schrittwieser  and Ioannis Antonoglou  and Matthew Lai  and Arthur Guez  and Marc Lanctot  and Laurent Sifre  and Dharshan Kumaran  and Thore Graepel  and Timothy Lillicrap  and Karen Simonyan  and Demis Hassabis },
+title = {A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play},
+journal = {Science},
+volume = {362},
+number = {6419},
+pages = {1140-1144},
+year = {2018},
+doi = {10.1126/science.aar6404},
+URL = {https://www.science.org/doi/abs/10.1126/science.aar6404},
+}
