--- a/escrito/pruebas.tex
+++ b/escrito/pruebas.tex
@@ -36,7 +36,7 @@
 \usepackage{sty/thesis-package}
 
 \author{Alonso Martinez Cisneros}
-\title{Titulo}
+\title{Working Title}
 \date{2021}
 
 \begin{document}
