--- a/escrito/img/board.tex
+++ b/escrito/img/board.tex
@@ -1,4 +1,4 @@
-\documentclass[tikz,14pt,border=10pt]{standalone}
+\documentclass[tikz,12pt]{standalone}
 \usepackage{textcomp}
 
 \usepackage{tikz}
@@ -63,7 +63,7 @@
 
 \node (roll-again) [
 		place, left of=two, text width=1cm,
-	] {Roll Again};
+	] {Spin Again};
 
 \node (three) [
 		place, above of=roll-again, fill=auroraRed,
