--- a/escrito/sty/thesis-package.sty
+++ b/escrito/sty/thesis-package.sty
@@ -47,7 +47,7 @@
 	citecolor=auroraLila,
 	urlcolor=auroraRed,
 	pdftitle={Tesis Alonso Martinez},
-	pdfpagemode=FullScreen,
+	% pdfpagemode=FullScreen,
 }
 
 % Pgpflots config
