--- a/escrito/img/transicion-markov-three.tex
+++ b/escrito/img/transicion-markov-three.tex
@@ -1,4 +1,4 @@
-\documentclass[tikz,14pt,border=10pt]{standalone}
+\documentclass[tikz,12pt]{standalone}
 \usepackage{textcomp}
 
 \usepackage{tikz}
@@ -50,7 +50,7 @@
     ]
 
 % Nodes
-\node (RA) [place, align=center] {RA};
+\node (RA) [place, align=center] {SA};
 \node (three) [place, right of=RA, fill=auroraRed] {3};
 \node (start) [place, below of=three] {\footnotesize Start};
 
