--- a/escrito/img/transicion-markov-three.tex
+++ b/escrito/img/transicion-markov-three.tex
@@ -50,9 +50,9 @@
     ]
 
 % Nodes
-\node (RA) [place, align=center] {SA};
+\node (RA) [place, align=center] {\ttfamily SA};
 \node (three) [place, right of=RA, fill=auroraRed] {3};
-\node (start) [place, below of=three] {\footnotesize Start};
+\node (start) [place, below of=three] {\ttfamily\footnotesize Start};
 
 \draw [->, semithick]
 	(start) to node [auto, swap]
