--- a/escrito/img/transicion-markov.tex
+++ b/escrito/img/transicion-markov.tex
@@ -57,12 +57,12 @@
 	% (-1.2cm, -2.45cm) rectangle (5.65cm, 1.15cm);
 
 % Nodes
-\node (RA) [place, align=center] {SA};
+\node (RA) [place, align=center] {\ttfamily SA};
 \node (three) [place, right of=RA, fill=auroraRed] {3};
 \node (four) [place, right of=three, fill=auroraRed] {4};
 \node (five) [place, right of=four, fill=auroraGreen] {5};
-\node (GS) [place, below of=RA] {GS};
-\node (start) [place, right of=GS] {\footnotesize Start};
+\node (GS) [place, below of=RA] {\ttfamily GS};
+\node (start) [place, right of=GS] {\ttfamily\footnotesize Start};
 \node (one) [place, right of=start, fill=frostDarkBlue] {1};
 \node (two) [place, right of=one, fill=frostDarkBlue] {2};
 
